tests/ui/proc-macro/issue-89566-suggest-fix-invalid-top-level-macro-attr.stderr
error: cannot determine resolution for the attribute macro `derive`
  --> $DIR/issue-89566-suggest-fix-invalid-top-level-macro-attr.rs:3:4
   |
LL | #![derive(Debug)]
   |    ^^^^^^
   |
   = note: import resolution is stuck, try simplifying macro imports

error: aborting due to 1 previous error

